--- a/client/src/assets/scss/stylesheets/buttons.scss
+++ b/client/src/assets/scss/stylesheets/buttons.scss
@@ -2,19 +2,28 @@
   position: fixed;
   bottom: 20px;
   left: 10px;
+  z-index: 99;
 }
 
 .filter-button {
   position: fixed;
   bottom: 20px;
   right: 10px;
+  z-index: 99;
 }
 
 .button-style {
-  font-size: large;
+  font-size: x-large;
   padding: .75em;
   border-radius: 1em;
   background-color: #EDE0D4;
   border: solid 1px rgb(209, 163, 111);
   border-radius: 5px;
+}
+
+@media (max-width: 638px) {
+  .button-style {
+    font-size: medium !important;
+  }
+
 }
